<?xml version="1.0"?>
<package>
  <name>summit_x_control</name>
  <version>1.0.1</version>
  <description>
		This package contains the launch files that load the required controller interfaces for simulation in Gazebo.
  </description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>


  <license>BSD</license>


  <url type="website">https://github.com/RobotnikAutomation/summit_x_control</url> 
  <url type="repository">https://github.com/RobotnikAutomation/summit_x_common</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_x_common/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>ros_controllers</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>summit_xl_pad</run_depend>  
  <run_depend>summit_x_description</run_depend>  

</package>
