<package>
  <name>summit_x_gazebo</name>
  <version>1.0.0</version>
  <description>
    Launch files and world files to start the models in gazebo
  </description>
  <maintainer email="info@robotnik.es">Robotnik</maintainer>

  <license>BSD</license>


  <author email="info@robotnik.es">Robotnik</author>
  
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>summit_x_control</run_depend>  
  <run_depend>summit_x_robot_control</run_depend>  
  <run_depend>summit_x_description</run_depend> 
  <run_depend>xacro</run_depend> 

  <export>
	  <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
  
</package>
