<package>
  <name>summit_x_gazebo</name>
  <version>1.0.2</version>
  <description>
    Launch files and world files to start the models in gazebo
  </description>
  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzman</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/summit_x_gazebo</url>
  <url type="repository">https://github.com/RobotnikAutomation/summit_x_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_x_sim/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzman</author>
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>summit_x_control</build_depend>  
  <build_depend>summit_x_robot_control</build_depend>  
  <build_depend>summit_x_description</build_depend> 
  <build_depend>xacro</build_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>summit_x_control</run_depend>  
  <run_depend>summit_x_robot_control</run_depend>  
  <run_depend>summit_x_description</run_depend> 
  <run_depend>xacro</run_depend> 

  <export>
	  <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
  
</package>
