<?xml version="1.0"?>
<package>
  <name>summit_x_robot_control</name>
  <version>1.0.7</version>
  <description>
	  Control the robot joints in all kinematic configurations, publishes odom topic and, 
	  if configured, also tf odom to base_link. Usually takes as input joystick commands 
	  and generates as outputs references for the gazebo controllers defined in summit_xl_control.
  </description>

  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzman</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/summit_x_robot_control</url>
  <url type="repository">https://github.com/RobotnikAutomation/summit_x_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_x_sim/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzman</author>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  
  <run_depend>robotnik_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>


  <export>
  </export>
</package>
