<?xml version="1.0"?>
<package>
  <name>summit_x_sim</name>
  <version>1.0.0</version>
  <description>The summit_x_sim metapackage</description>

  <maintainer email="info@robotnik.es">Robotnik</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
     <metapackage/> 
  </export>
</package>
