<?xml version="1.0"?>
<package>
  <name>summit_x_sim</name>
  <version>1.0.0</version>
  <description>The summit_x_sim metapackage</description>

  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzman</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/summit_x_sim</url>
  <url type="repository">https://github.com/RobotnikAutomation/summit_x_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_x_sim/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzman</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>summit_x_control</run_depend>
  <run_depend>summit_x_gazebo</run_depend>
  <run_depend>summit_xl_sim_bringup</run_depend>
  <run_depend>summit_x_robot_control</run_depend>

  <export>
     <metapackage/> 
  </export>
</package>
