<package>
  <name>summit_x_sim_bringup</name>
  <version>1.0.0</version>
  <description>
    Launch files for Summit-X simulation.
  </description>
  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzman</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/summit_x_sim_bringup</url>
  <url type="repository">https://github.com/RobotnikAutomation/summit_x_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_x_sim/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzman</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>summit_x_control</run_depend>  
  <run_depend>summit_x_description</run_depend>
  <run_depend>summit_xl_pad</run_depend>
  <run_depend>twist_mux</run_depend>   

</package>
